<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="19dp"
        android:text="@string/tcol_2"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/Surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="74dp"
        android:text="@string/tcol_3"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/Marks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="128dp"
        android:text="@string/tcol_4"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Marks"
        android:layout_alignStart="@+id/Surname"
        android:text="@string/tcol_1"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btnViewData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="217dp"
        android:layout_marginLeft="217dp"
        android:layout_marginTop="316dp"
        android:text="@string/btnViewData" />

    <Button
        android:id="@+id/btnAddData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="316dp"
        android:text="@string/btnAddData" />

    <Button
        android:id="@+id/btnUpdateData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginBottom="294dp"
        android:text="@string/btnUpdateData" />

    <Button
        android:id="@+id/btnDeleteData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnViewData"
        android:layout_alignTop="@+id/btnUpdateData"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/btnDeleteData" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@+id/Marks"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText_id"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-51dp"
        android:layout_marginLeft="-51dp"
        android:layout_marginTop="190dp"
        android:layout_toEndOf="@+id/Marks"
        android:layout_toRightOf="@+id/Marks"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText_marks"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="131dp"
        android:layout_toEndOf="@+id/Marks"
        android:layout_toRightOf="@+id/Marks"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText_surname"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="79dp"
        android:layout_toEndOf="@+id/Marks"
        android:ems="10"
        android:inputType="text" />
</RelativeLayout>